# hydra

./: .buildpacks  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  Procfile  README.md  bumpr.rc  docker-compose.broker.yml  docker-compose.test.yml  docker-compose.yml  mock.py  profiling.yml  pylock.toml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  tag_version.sh  test_table.parquet
.benchmarks/: benchmarks.csv  benchmarks.md  benchmarks_backup.csv
.circleci/: config.yml
.github/workflows/: benchmark.yml  test.yml
benchmarks/: benchmarks.md  benchmarks.txt
decapode/: app.py  background_tasks.py  cli.py
decapode/kafka/: consumer.py
hydra/: app.py  background_tasks.py  cli.py  config.py  context.py  crawl.py  datalake_service.py  monitor.py  utils.py
hydra/kafka/: consumer.py
migrations/: _LATEST_REVISION
scripts/: probe_cors_sample.py
tests/: catalog.csv  catalog_harvested.csv  conftest.py  test_analysis.py  test_api.py  test_api_legacy.py  test_benchmark.py  test_cli.py  test_crawler.py  test_csv_analysis.py  test_csv_analysis_exceptions.py  test_csvgz_analysis.py  test_kafka_consumer.py  test_logger.py  test_other_formats_analysis.py  test_parquet_export.py  test_utils.py
tests/data/: catalog.csv  catalog.xls  catalog.xlsx  catalog_harvested.csv  invalid.geojson  valid.geojson
tests/test_analysis/: test_analysis_csv.py  test_analysis_csv_exceptions.py  test_analysis_geojson.py  test_analysis_helpers.py  test_analysis_ogc.py  test_analysis_other_formats.py  test_analysis_parquet.py  test_change_detections.py  test_geojson.py  test_helpers.py  test_ogc.py  test_parquet_export.py  test_wfs.py
tests/test_api/: test_api_checks.py  test_api_legacy.py  test_api_resources.py  test_api_resources_exceptions.py  test_api_statuses.py
tests/test_cli/: __init__.py  test_analysis.py  test_catalog.py  test_dump_tables_index.py  test_external_analysis.py  test_probe_cors.py  test_purge.py  test_quiet_startup.py
tests/test_conversion/: test_csv_to_db.py  test_csv_to_geojson.py  test_db_to_geojson.py  test_db_to_parquet.py  test_geojson_to_pmtiles.py  test_parquet_export.py
tests/test_crawl/: test_backoff.py  test_cors_detection.py  test_crawl.py  test_helpers.py
tests/test_db/: test_db_checks.py  test_db_resources.py  test_resource_job_status.py
tests/test_utils/: test_compute_checksum_from_file.py  test_csv_headers.py  test_file.py  test_queue.py  test_s3_client.py  test_sentry_error.py
udata_datalake_service/: .env.sample  __init__.py  background_tasks.py  cli.py  consumer.py  main.py  producer.py  settings.py  tasks.py
udata_hydra/: .env.sample  __init__.py  analysis.py  app.py  cli.py  cli_entry.py  config.py  config_default.toml  context.py  crawl.py  datalake_service.py  logger.py  monitor.py  types.py  worker.py
udata_hydra/analysis/: csv.py  csv_exports.py  csv_geojson.py  errors.py  exceptions.json  exports.py  geojson.py  helpers.py  ogc.py  parquet.py  pmtiles.py  resource.py  tables_index.py  wfs.py
udata_hydra/cli/: __init__.py  analysis.py  catalog.py  common.py  crawl.py  db.py  purge.py
udata_hydra/conversion/: __init__.py  csv_to_db.py  csv_to_geojson.py  csv_to_geojson_and_pmtiles.py  csv_to_parquet.py  db_to_geojson.py  db_to_geojson_and_pmtiles.py  db_to_parquet.py  geojson_to_pmtiles.py  parquet_to_db.py  schema.py
udata_hydra/crawl/: __init__.py  calculate_next_check.py  check_resource.py  check_resources.py  helpers.py  preprocess_check_data.py  process_check_data.py  select_batch.py  select_resources_to_check.py  start_checks.py  utils.py  utils_db.py
udata_hydra/data_formats/: __init__.py  data_format.py  detect.py
udata_hydra/data_formats/csv_like/: __init__.py  analyse.py  code_commune.py  to_db.py  to_geojson.py
udata_hydra/data_formats/geojson/: __init__.py  analyse.py  to_pmtiles.py
udata_hydra/data_formats/ogc/: __init__.py  analyse.py
udata_hydra/data_formats/parquet/: __init__.py  analyse.py  to_db.py
udata_hydra/data_formats/pmtiles/: __init__.py
udata_hydra/data_formats/table/: __init__.py  code_commune.py  to_geojson.py  to_parquet.py
udata_hydra/db/: __init__.py  catalog.py  check.py  checks.py  codec.py  resource.py  resource_exception.py
udata_hydra/kafka/: consumer.py
udata_hydra/migrations/: 20221208_rev4_up_rev5.sql  20230119_rev5_up_rev6.sql  _LATEST_REVISION  __init__.py
udata_hydra/migrations/csv/: 20221205_initial_up_rev1.sql  20230206_datetime_aware.sql  20230211_add_webanon.sql  20240827_add_indexes_column_to_tables_index_table.sql  20250610_migrate_resources_exception.sql  20250626_delete_datetime_iso_references.sql  20250902_delete_analyses_too_long_column_names.sql  20250911_add_deleted_at_and_dataset_id_to_tables_index.sql  20250911_add_deleted_column_to_tables_index.sql  20250916_add_dataset_id_to_tables_index.sql  20251103_add_indexes.sql  20260630_add_resources_exceptions.sql
udata_hydra/migrations/main/: 20221205_initial_up_rev1.sql  20221206_rev1_up_rev2.sql  20221206_rev2_up_rev3.sql  20221208_rev3_up_rev4.sql  20230121_rev6_up_rev7.sql  20230121_rev7_up_rev8.sql  20230130_drop_migrations.sql  20230206_datetime_aware.sql  20230515_rev8_up_rev9.sql  20230606_rev9_up_rev10.sql  20231102_drop_csv_analysis.sql  20240827_add_resources_exceptions_table.sql  20240926_add_indexes.sql  20241004_add_comment_column_to_resources_exceptions.sql  20241016_add_parquet_columns.sql  20241021_add_parquet_columns.sql  20241023_alter_foreign_key.sql  20241025_add_next_check_column.sql  20250108_add_indexes.sql  20250130_add_pmtiles_fields.sql  (+10 more)
udata_hydra/routes/: __init__.py  checks.py  file_analysis.py  resources.py  resources_exceptions.py  resources_legacy.py  status.py
udata_hydra/schemas/: __init__.py  check.py  resource.py  resource_exception.py  resource_query.py
udata_hydra/utils/: __init__.py  app_version.py  auth.py  casting.py  csv.py  db.py  errors.py  file.py  geojson.py  http.py  kafka.py  minio.py  na_values.py  ogc.py  parquet.py  queue.py  reader.py  s3.py  timer.py  wfs.py
