[project]
name = "udata-hydra"
version = "2.4.2"
description = "Async crawler and parsing service for data.gouv.fr"
authors = [{ name = "Opendata Team", email = "opendatateam@data.gouv.fr" }]
dependencies = [
    "aiohttp>=3.10.3",
    "asyncpg>=0.29.0",
    "coloredlogs>=15.0.1",
    "csv-detective==0.9.3.dev2010",
    "dateparser>=1.1.7",
    "humanfriendly>=10.0",
    "json-stream>=2.3.3",
    "marshmallow>=3.14.1",
    "minicli>=0.5.3",
    "minio>=7.2.8",
    "progressist>=0.1.0",
    "pyarrow>=16.1.0",
    "python-magic>=0.4.25",
    "python-slugify>=8.0.4",
    "redis>=4.1.4",
    "rq>=1.11.1",
    "sentry-sdk>=2.10.0",
    "sqlalchemy>=1.4.46",
    "tippecanoe>=2.72.0",
]
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
readme = "README.md"

[project.optional-dependencies]
dev = [
    "aiohttp-devtools>=1.0.post0",
    "aioresponses>=0.7.3",
    "gunicorn>=20.1.0",
    "mypy>=1.11.0",
    "nest_asyncio>=1.5.5",
    "pytest>=8.3.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.7.0",
    "ruff>=0.9.3",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "boto3.*",
    "botocore.*",
    "csv_detective.*",
    "humanfriendly.*",
    "minicli.*",
    "sqlalchemy.*",
    "str2bool.*",
    "str2float.*",
    "toml.*",
]
ignore_missing_imports = true

[tool.poetry.scripts]
udata-hydra = "udata_hydra.cli:run"
udata-hydra-crawl = "udata_hydra.crawl:run"
udata-hydra-app = "udata_hydra.app:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "catalog_harvested: use catalog_harvested.csv as source",
]
# addopts = "--cov=udata_hydra/ --cov-report term-missing --cov-fail-under=89" # if we want to fail if coverage is less than 89%
# addopts = "--cov=udata_hydra/ --cov-report term-missing"

[tool.ruff]
lint = { extend-select = ["I"] } # ["I"] is to also sort imports with an isort rule
line-length = 100

[tool.uv.build-backend]
module-name = "udata_hydra"
module-root = ""

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
